fix spacing

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -69,6 +69,7 @@ select:invalid {
     display: flex;
     justify-content: center;
     width: 100%;
+    min-height: 80px;
 }
 
 .embla__viewport {
